--- a/package.json
+++ b/package.json
@@ -2,22 +2,23 @@
   "name": "appblog",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "node server.js"
+    "serve": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.1.1",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui": "^4.18.3",
-    "swagger-ui-express": "^4.6.3",
-    "yamljs": "^0.3.0"
+    "generate-password": "^1.7.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.1.1"
   }
 }
